# Maple-Wallpaper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/api/: api.cpp  maplestory_io.cpp  maplestory_io.hpp  nexon_api.cpp  nexon_api.hpp
src/cache/: cache.cpp  disk_cache.cpp  disk_cache.hpp
src/character/: character.cpp
src/config_app/: main.cpp
src/core/: config.cpp  config.hpp  core.cpp  core.hpp
src/platform/: native_types.hpp  platform.cpp  process.cpp  process.hpp  session_monitor.cpp  session_monitor.hpp  tray.cpp  tray.hpp  wallpaper_host.cpp  wallpaper_host.hpp
src/render/: render.cpp
src/wallpaper/: main.cpp
